Register Swagger Annotation Changes
